--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -1296,6 +1296,10 @@ jobs:
         cache-on-failure: true
         workspaces: sable -> target
     - run: rustc --version
+    - name: setup pg_hba
+      run: 'echo "host all all all trust" > /etc/postgresql/*/main/pg_hba.conf
+
+        '
     - name: start postgresql
       run: sudo systemctl start postgresql.service
     - name: set postgresql password
