--- a/workflows.yml
+++ b/workflows.yml
@@ -273,7 +273,7 @@ software:
             - run: rustc --version
             - name: setup pg_hba
               run: |
-                echo "host all all all trust" > /etc/postgresql/*/main/pg_hba.conf
+                echo "host all all all trust" | sudo tee -a /etc/postgresql/*/main/pg_hba.conf
             - name: start postgresql
               run: "sudo systemctl start postgresql.service"
             - name: set postgresql password
