Add tests for Sable's postgresql chathistory backend (#292)
* Add tests for Sable's postgresql chathistory backend

* Make tests less flaky on Sable

* Another workaround for Sable's latency with the history server

* Actually print logs from sable_services and sable_history

* Need fanout > 1 when more than 2 nodes.

And restore faketime config to previous value, as that wasn't the right fix

* Bump Sable

* Fix lint

* Start postgresql

* Fix stderr/stdout typo

* Fix typo in Ergo selectors

* Bump sable

* Use -m instead of -k to filter markers

-k uses substring match, so -k Sable matched ErgoUtf8NickDisabledTestCase

* Don't run DM tests from SablePostgresqlHistoryTestCase

* sable: Rely on SASL PLAIN instead of NickServ to check for services availability

* Wait for sable_history to be up

* Enable debug logs

* Host is required

* Wait for postgresql to start before running Sable

* Run wait-for-it after installing it

* Try to make sable_history able to connect

* I guess I'll have to bruteforce this password

* Explicitly set a password. and this requires a running postgres, so no need for wait-for-it anymore

* whyyyy does it reject my password

* pg_hba allowing unix sockets but not tcp, maybe?

* sudo

* Update Sable

* Fix parsing of RPL_LINKS

first server is remote, second server is local: https://modern.ircdocs.horse/#rpllinks-364

* Catch exception from sable_history and sable_services

* Try to print underlying error when services can't be started

* Update Sable to use pg_advisory_lock on sable_history migrations

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -1116,6 +1116,21 @@ jobs:
         cache-on-failure: true
         workspaces: sable -> target
     - run: rustc --version
+    - name: setup pg_hba
+      run: 'echo "host all all all trust" | sudo tee -a /etc/postgresql/*/main/pg_hba.conf
+
+        '
+    - name: start postgresql
+      run: sudo systemctl start postgresql.service
+    - name: set postgresql password
+      run: 'sudo -u postgres psql -c "ALTER USER postgres PASSWORD ''postgres''"
+
+        '
+    - name: check postgresql password
+      run: 'PGPASSWORD=postgres psql -h localhost -U postgres -d postgres -c "SELECT
+        1;"
+
+        '
     - name: Build Sable
       run: |
         cd $GITHUB_WORKSPACE/sable/
@@ -1129,7 +1144,9 @@ jobs:
     - env:
         IRCTEST_DEBUG_LOGS: ${{ runner.debug }}
       name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  PATH=$GITHUB_WORKSPACE/sable/target/debug/sbin:$GITHUB_WORKSPACE/sable/target/debug/bin:$GITHUB_WORKSPACE/sable/target/debug:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH
+        IRCTEST_POSTGRESQL_URL=postgresql://postgres:postgres@localhost IRCTEST_DEBUG_LOGS=1
+        PATH=$GITHUB_WORKSPACE/sable/target/debug/sbin:$GITHUB_WORKSPACE/sable/target/debug/bin:$GITHUB_WORKSPACE/sable/target/debug:$PATH
         make sable
       timeout-minutes: 30
     - if: always()
