--- a/workflows.yml
+++ b/workflows.yml
@@ -271,6 +271,18 @@ software:
                 workspaces: "sable -> target"
                 cache-on-failure: true
             - run: rustc --version
+            - name: setup pg_hba
+              run: |
+                echo "host all all all trust" | sudo tee -a /etc/postgresql/*/main/pg_hba.conf
+            - name: start postgresql
+              run: "sudo systemctl start postgresql.service"
+            - name: set postgresql password
+              run: |
+                sudo -u postgres psql -c "ALTER USER postgres PASSWORD 'postgres'"
+            - name: check postgresql password
+              run: |
+                PGPASSWORD=postgres psql -h localhost -U postgres -d postgres -c "SELECT 1;"
+        env: "IRCTEST_POSTGRESQL_URL=postgresql://postgres:postgres@localhost IRCTEST_DEBUG_LOGS=1"
         separate_build_job: false
         build_script: |
             cd $GITHUB_WORKSPACE/sable/
